--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,79 @@ h1 {
     color: #555;
     text-decoration: underline;
 }
+
+.post {
+    padding: 30px 10px;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    margin: 0 0 40px;
+    clear: both;
+}
+
+.post .detail {
+    float: left;
+    width: 250px;
+}
+
+h2 {
+    font-weight: normal;
+    font-size: 2.6em;
+    padding: 0 0 10px;
+    margin: 0 0 15px;
+}
+
+h2 a {
+    color: #d40000;
+    text-decoration: none;
+}
+
+.post .detail .info {
+    font-size: .9em;
+    color: #999;
+}
+
+.post .detail .info .a {
+    color: #777;
+    border-bottom: 1px dotted #999;
+    padding: 3px 1px;
+}
+
+.post .postbody {
+    float: right;
+    width: 618px;
+    padding: 0 0 0 30px;
+    border-left: 1px solid #ddd;
+}
+
+.clear {
+    clear: both;
+}
+
+.col {
+    width: 290px;
+    margin: 0 40px 30px 0;
+    float: left;
+    font-size: .9em;
+}
+
+h3 {
+    font-size: 1.7em;
+    font-weight: normal;
+    margin: 0 0 20px;
+}
+
+h3 a {
+    color: #222;
+}
+
+.last {
+    margin-right: 0;
+}
+
+#footer {
+    clear: both;
+    border-top: 1px solid #ddd;
+    padding: 20px 0;
+    color: #999;
+
+}
